commit before sent to shiro

--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -8,8 +8,8 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-              <i class="icon-layout menu-icon"></i>
-              <span class="menu-title">UI Elements</span>
+              <i class="ti-shopping-cart-full menu-icon"></i>
+              <span class="menu-title">Commande</span>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="ui-basic">
@@ -22,8 +22,8 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
-              <i class="icon-columns menu-icon"></i>
-              <span class="menu-title">Form elements</span>
+              <i class="ti-truck menu-icon"></i>
+              <span class="menu-title">Arrivage</span>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="form-elements">
@@ -34,8 +34,8 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
-              <i class="icon-bar-graph menu-icon"></i>
-              <span class="menu-title">Charts</span>
+              <i class="ti-package menu-icon"></i>
+              <span class="menu-title">Stock</span>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="charts">
