--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -62,12 +62,15 @@
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
               <i class="icon-contract menu-icon"></i>
-              <span class="menu-title">Icons</span>
+              <span class="menu-title">Produit</span>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="icons">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/icons/mdi.html">Mdi icons</a></li>
+                <li class="nav-item"> <a class="nav-link" href="{{path('create_product')}}">Nouveau</a></li>
+              </ul>
+               <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="{{path('app_product')}}">Liste</a></li>
               </ul>
             </div>
           </li>
