--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -14,8 +14,8 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
+                <li class="nav-item"> <a class="nav-link" href="{{path('create_purchase')}}">Nouveau</a></li>
+                <li class="nav-item"> <a class="nav-link" href="{{path('app_purchase')}}">Liste</a></li>
                 <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
               </ul>
             </div>
