--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,10 +9,12 @@
             {{ encore_entry_link_tags('app') }}
 
             <link rel="stylesheet" href="{{asset('vendors/feather/feather.css')}}">
+            <link href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.css">
             <link rel="stylesheet" href="{{asset('vendors/ti-icons/css/themify-icons.css')}}">
             <link rel="stylesheet" href="{{asset('vendors/css/vendor.bundle.base.css')}}">
-            <!-- endinject -->
-            <!-- Plugin css for this page -->
+            <link rel="stylesheet" href="{{asset('vendors/select2/select2.min.css')}}">
+            <link rel="stylesheet" href="{{asset('vendors/select2-bootstrap-theme/select2-bootstrap.min.css')}}">
+  
             <link rel="stylesheet" href="{{asset('vendors/datatables.net-bs4/dataTables.bootstrap4.css')}}">
             <link rel="stylesheet" href="{{asset('vendors/ti-icons/css/themify-icons.css')}}">
             <link rel="stylesheet" type="text/css" href="{{asset('js/select.dataTables.min.css')}}">
@@ -62,9 +64,12 @@
                         
                         {% endblock %}
                         <div class="main-panel">
-                        {% block content %}
+                        <div class="content-wrapper">
+                          {% block content %}
                             
                         {% endblock %}
+                        </div>
+                        
                         </div>
                 </div>
         </div>
