--- a/templates/landing/landing.html.twig
+++ b/templates/landing/landing.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
        <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">HandMade by Team Shiro/Loic <a href="https://www.bootstrapdash.com/" target="_blank">LoicLien.com</a> Credit to bootstrap. All rights reserved.</span>
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">HandMade by Team Shiro Kevin <a href="https://www.bootstrapdash.com/" target="_blank">SoraLien.com</a> Credit to bootstrap. All rights reserved.</span>
             <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Made with <i class="ti-heart text-danger ml-1"></i></span>
           </div>
           
